--- a/site/user-guide/qc/index.html
+++ b/site/user-guide/qc/index.html
@@ -12,7 +12,7 @@
         <meta name="author" content="SpinePrep Contributors">
 
 
-        <link rel="canonical" href="https://spineprep.readthedocs.io/user-guide/qc/">
+        <link rel="canonical" href="https://spineprep.github.io/spineprep/user-guide/qc/">
 
 
         <link rel="prev" href="../outputs/">
@@ -56,16 +56,6 @@
 
     <script>__md_scope=new URL("../..",location),__md_hash=e=>[...e].reduce(((e,_)=>(e<<5)-e+_.charCodeAt(0)),0),__md_get=(e,_=localStorage,t=__md_scope)=>JSON.parse(_.getItem(t.pathname+"."+e)),__md_set=(e,_,t=localStorage,a=__md_scope)=>{try{t.setItem(a.pathname+"."+e,JSON.stringify(_))}catch(e){}}</script>
 
-
-
-
-
-
-
-
-<script id="__analytics">function __md_analytics(){function e(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],e("js",new Date),e("config","G-XXXXXXXXXX"),document.addEventListener("DOMContentLoaded",(function(){document.forms.search&&document.forms.search.query.addEventListener("blur",(function(){this.value&&e("event","search",{search_term:this.value})}));document$.subscribe((function(){var t=document.forms.feedback;if(void 0!==t)for(var a of t.querySelectorAll("[type=submit]"))a.addEventListener("click",(function(a){a.preventDefault();var n=document.location.pathname,d=this.getAttribute("data-md-value");e("event","feedback",{page:n,data:d}),t.firstElementChild.disabled=!0;var r=t.querySelector(".md-feedback__note [data-md-value='"+d+"']");r&&(r.hidden=!1)})),t.hidden=!1})),location$.subscribe((function(t){e("config","G-XXXXXXXXXX",{page_path:t.pathname})}))}));var t=document.createElement("script");t.async=!0,t.src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX",document.getElementById("__analytics").insertAdjacentElement("afterEnd",t)}</script>
-
-    <script>if("undefined"!=typeof __md_analytics){var consent=__md_get("__consent");consent&&consent.analytics&&__md_analytics()}</script>
 
 
 
@@ -1304,13 +1294,13 @@
 <div class="grid cards">
 <ul>
 <li>
-<p><span class="twemoji lg middle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m16 11.78 4.24-7.33 1.73 1-5.23 9.05-6.51-3.75L5.46 19H22v2H2V3h2v14.54L9.5 8z"/></svg></span> <strong>Framewise Displacement</strong></p>
+<p>:material-chart-line:{ .lg .middle } <strong>Framewise Displacement</strong></p>
 <hr />
 <p>Shows motion over time with threshold lines</p>
 <p><img alt="FD Plot" src="../../_assets/examples/fd_plot.png" /></p>
 </li>
 <li>
-<p><span class="twemoji lg middle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m16 11.78 4.24-7.33 1.73 1-5.23 9.05-6.51-3.75L5.46 19H22v2H2V3h2v14.54L9.5 8z"/></svg></span> <strong>DVARS</strong></p>
+<p>:material-chart-line:{ .lg .middle } <strong>DVARS</strong></p>
 <hr />
 <p>Shows signal stability over time</p>
 <p><img alt="DVARS Plot" src="../../_assets/examples/dvars_plot.png" /></p>
@@ -1321,13 +1311,13 @@
 <div class="grid cards">
 <ul>
 <li>
-<p><span class="twemoji lg middle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m16 11.78 4.24-7.33 1.73 1-5.23 9.05-6.51-3.75L5.46 19H22v2H2V3h2v14.54L9.5 8z"/></svg></span> <strong>Global Signal</strong></p>
+<p>:material-chart-line:{ .lg .middle } <strong>Global Signal</strong></p>
 <hr />
 <p>Mean signal across all voxels</p>
 <p><img alt="Global Signal" src="../../_assets/examples/global_signal.png" /></p>
 </li>
 <li>
-<p><span class="twemoji lg middle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m16 11.78 4.24-7.33 1.73 1-5.23 9.05-6.51-3.75L5.46 19H22v2H2V3h2v14.54L9.5 8z"/></svg></span> <strong>SNR Map</strong></p>
+<p>:material-chart-line:{ .lg .middle } <strong>SNR Map</strong></p>
 <hr />
 <p>Signal-to-noise ratio across the image</p>
 <p><img alt="SNR Map" src="../../_assets/examples/snr_map.png" /></p>
@@ -1338,13 +1328,13 @@
 <div class="grid cards">
 <ul>
 <li>
-<p><span class="twemoji lg middle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m16 11.78 4.24-7.33 1.73 1-5.23 9.05-6.51-3.75L5.46 19H22v2H2V3h2v14.54L9.5 8z"/></svg></span> <strong>aCompCor Components</strong></p>
+<p>:material-chart-line:{ .lg .middle } <strong>aCompCor Components</strong></p>
 <hr />
 <p>First 6 anatomical CompCor components</p>
 <p><img alt="aCompCor" src="../../_assets/examples/acompcor_plot.png" /></p>
 </li>
 <li>
-<p><span class="twemoji lg middle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m16 11.78 4.24-7.33 1.73 1-5.23 9.05-6.51-3.75L5.46 19H22v2H2V3h2v14.54L9.5 8z"/></svg></span> <strong>Censor Mask</strong></p>
+<p>:material-chart-line:{ .lg .middle } <strong>Censor Mask</strong></p>
 <hr />
 <p>Time points marked for exclusion</p>
 <p><img alt="Censor Mask" src="../../_assets/examples/censor_mask.png" /></p>
@@ -1453,8 +1443,6 @@
 
 
 
-
-
               </article>
             </div>
 
@@ -1514,81 +1502,6 @@
       <div class="md-dialog__inner md-typeset"></div>
     </div>
 
-
-      <div class="md-consent" data-md-component="consent" id="__consent" hidden>
-        <div class="md-consent__overlay"></div>
-        <aside class="md-consent__inner">
-          <form class="md-consent__form md-grid md-typeset" name="consent">
-
-
-
-
-
-
-<h4>Cookie consent</h4>
-<p>We use cookies to recognize your repeated visits and preferences, as well as to measure the effectiveness of our documentation and whether users find what they're searching for. With your consent, you're helping us to make our documentation better.</p>
-<input class="md-toggle" type="checkbox" id="__settings" >
-<div class="md-consent__settings">
-  <ul class="task-list">
-
-
-
-
-
-
-
-
-
-  <li class="task-list-item">
-    <label class="task-list-control">
-      <input type="checkbox" name="analytics" checked>
-      <span class="task-list-indicator"></span>
-      Google Analytics
-    </label>
-  </li>
-
-
-
-
-
-
-
-
-
-
-
-  <li class="task-list-item">
-    <label class="task-list-control">
-      <input type="checkbox" name="github" checked>
-      <span class="task-list-indicator"></span>
-      GitHub
-    </label>
-  </li>
-
-
-
-
-  </ul>
-</div>
-<div class="md-consent__controls">
-
-
-      <button class="md-button md-button--primary">Accept</button>
-
-
-
-
-
-
-
-      <label class="md-button" for="__settings">Manage settings</label>
-
-
-</div>
-          </form>
-        </aside>
-      </div>
-      <script>var consent=__md_get("__consent");if(consent)for(var input of document.forms.consent.elements)input.name&&(input.checked=consent[input.name]||!1);else"file:"!==location.protocol&&setTimeout((function(){document.querySelector("[data-md-component=consent]").hidden=!1}),250);var form=document.forms.consent;for(var action of["submit","reset"])form.addEventListener(action,(function(e){if(e.preventDefault(),"reset"===e.type)for(var n of document.forms.consent.elements)n.name&&(n.checked=!1);__md_set("__consent",Object.fromEntries(Array.from(new FormData(form).keys()).map((function(e){return[e,!0]})))),location.hash="",location.reload()}))</script>
 
 
 
