ci(docs): publish to org root via cross-repo Pages  [spi-011b]

--- a/site/contributing/index.html
+++ b/site/contributing/index.html
@@ -12,7 +12,7 @@
         <meta name="author" content="SpinePrep Contributors">
 
 
-        <link rel="canonical" href="https://spineprep.github.io/spineprep/contributing/">
+        <link rel="canonical" href="https://spineprep.github.io/contributing/">
 
 
         <link rel="prev" href="../reference/api/">
