--- a/site/getting-started/index.html
+++ b/site/getting-started/index.html
@@ -12,7 +12,7 @@
         <meta name="author" content="SpinePrep Contributors">
 
 
-        <link rel="canonical" href="https://spineprep.github.io/spineprep/getting-started/">
+        <link rel="canonical" href="https://spineprep.github.io/getting-started/">
 
 
         <link rel="prev" href="..">
