--- a/site/user-guide/qc/index.html
+++ b/site/user-guide/qc/index.html
@@ -12,7 +12,7 @@
         <meta name="author" content="SpinePrep Contributors">
 
 
-        <link rel="canonical" href="https://spineprep.github.io/spineprep/user-guide/qc/">
+        <link rel="canonical" href="https://spineprep.github.io/user-guide/qc/">
 
 
         <link rel="prev" href="../outputs/">
