--- a/site/CHANGELOG/index.html
+++ b/site/CHANGELOG/index.html
@@ -12,7 +12,7 @@
         <meta name="author" content="SpinePrep Contributors">
 
 
-        <link rel="canonical" href="https://spineprep.github.io/spineprep/CHANGELOG/">
+        <link rel="canonical" href="https://spineprep.github.io/CHANGELOG/">
 
 
 
