--- a/site/PLAYBOOK_Cursor/index.html
+++ b/site/PLAYBOOK_Cursor/index.html
@@ -12,7 +12,7 @@
         <meta name="author" content="SpinePrep Contributors">
 
 
-        <link rel="canonical" href="https://spineprep.github.io/spineprep/PLAYBOOK_Cursor/">
+        <link rel="canonical" href="https://spineprep.github.io/PLAYBOOK_Cursor/">
 
 
 
