--- a/site/user-guide/outputs/index.html
+++ b/site/user-guide/outputs/index.html
@@ -12,7 +12,7 @@
         <meta name="author" content="SpinePrep Contributors">
 
 
-        <link rel="canonical" href="https://spineprep.github.io/spineprep/user-guide/outputs/">
+        <link rel="canonical" href="https://spineprep.github.io/user-guide/outputs/">
 
 
         <link rel="prev" href="../usage/">
